[package]
name = "actix_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.4.1", features = ["openssl"] }
openssl = { version = "0.10.34", features = [] }
tokio = "1.35.1"